--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cors": "^2.5.3",
     "jasmine-node": "^1.14.5"
   },
   "dependencies": {
