testing for params

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "body-parser": "^1.12.0",
     "cors": "^2.5.3",
-    "jasmine-node": "^1.14.5"
+    "jasmine-node": "^1.14.5",
+    "url": "^0.10.2"
   },
   "dependencies": {
     "ejs": "^2.3.1",
