--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "ejs": "^2.3.1",
-    "express": "^4.12.0"
+    "express": "^4.12.0",
+    "jquery": "^2.1.3"
   }
 }
