--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.12.0",
     "cors": "^2.5.3",
     "jasmine-node": "^1.14.5",
+    "request": "^2.53.0",
     "url": "^0.10.2"
   },
   "dependencies": {
