--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "ejs": "^2.3.1",
     "express": "^4.12.0",
-    "jquery": "^2.1.3"
+    "jquery": "^2.1.3",
+    "request": "^2.53.0"
   }
 }
