--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^2.3.1",
     "express": "^4.12.0",
     "jquery": "^2.1.3",
-    "request": "^2.53.0"
+    "request": "^2.53.0",
+    "spotify-web-api-node": "^2.0.0"
   }
 }
